test/tests/stages/14_pointers/invalid_types/return_wrong_pointer_type.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: i
        None: 
        Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: return_long_pointer
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CAddrOf: 
                  CVar: 
                    TIdentifier: i
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Pointer: 
            Long: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: l
                  CSingleInit: 
                    CFunctionCall: 
                      TIdentifier: return_long_pointer
                      List[0]: 
                      None: 
                    None: 
                  Pointer: 
                    Long: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
